[gd_scene load_steps=18 format=2]

[ext_resource path="res://Resources/Cards/Blank_Blue.png" type="Texture" id=1]
[ext_resource path="res://Resources/Scripts/Grid.gd" type="Script" id=2]
[ext_resource path="res://Resources/Scripts/Foundation_1.gd" type="Script" id=3]
[ext_resource path="res://Resources/Scripts/Foundation_2.gd" type="Script" id=4]
[ext_resource path="res://Resources/Scripts/Foundation_3.gd" type="Script" id=5]
[ext_resource path="res://Resources/Scripts/Foundation_4.gd" type="Script" id=6]
[ext_resource path="res://Resources/Scripts/Talon.gd" type="Script" id=7]
[ext_resource path="res://Resources/Scripts/Stock.gd" type="Script" id=8]
[ext_resource path="res://Resources/Scripts/Tableau_1.gd" type="Script" id=9]
[ext_resource path="res://Resources/Scripts/Tableau_2.gd" type="Script" id=10]
[ext_resource path="res://Resources/Scripts/Tableau_3.gd" type="Script" id=11]
[ext_resource path="res://Resources/Scripts/Tableau_4.gd" type="Script" id=12]
[ext_resource path="res://Resources/Scripts/Tableau_5.gd" type="Script" id=13]
[ext_resource path="res://Resources/Scripts/Tableau_6.gd" type="Script" id=14]
[ext_resource path="res://Resources/Scripts/Tableau_7.gd" type="Script" id=15]
[ext_resource path="res://Resources/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 16 )

[node name="Grid" type="Node2D"]
script = ExtResource( 2 )
width = 1000
height = 800
offset = 25
debug_level = 1

[node name="YSort" type="YSort" parent="."]

[node name="Stock" type="Node2D" parent="YSort"]
position = Vector2( 113.566, 136.176 )
script = ExtResource( 8 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Stock"]
texture = ExtResource( 1 )

[node name="Stock_RTL" type="RichTextLabel" parent="YSort/Stock/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
rect_min_size = Vector2( 90, 40 )
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Talon" type="Node2D" parent="YSort"]
position = Vector2( 238.566, 136.176 )
script = ExtResource( 7 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Talon"]
texture = ExtResource( 1 )

[node name="Talon_RTL" type="RichTextLabel" parent="YSort/Talon/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tableau_1" type="Node2D" parent="YSort"]
position = Vector2( 113.566, 321.176 )
script = ExtResource( 9 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Tableau_1"]
texture = ExtResource( 1 )

[node name="Tableau_RTL1" type="RichTextLabel" parent="YSort/Tableau_1/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tableau_2" type="Node2D" parent="YSort"]
position = Vector2( 238.566, 321.176 )
script = ExtResource( 10 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Tableau_2"]
texture = ExtResource( 1 )

[node name="Tableau_RTL2" type="RichTextLabel" parent="YSort/Tableau_2/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tableau_3" type="Node2D" parent="YSort"]
position = Vector2( 363.566, 321.176 )
script = ExtResource( 11 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Tableau_3"]
texture = ExtResource( 1 )

[node name="Tableau_RTL3" type="RichTextLabel" parent="YSort/Tableau_3/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tableau_4" type="Node2D" parent="YSort"]
position = Vector2( 488.566, 321.176 )
script = ExtResource( 12 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Tableau_4"]
texture = ExtResource( 1 )

[node name="Tableau_RTL4" type="RichTextLabel" parent="YSort/Tableau_4/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tableau_5" type="Node2D" parent="YSort"]
position = Vector2( 613.566, 321.176 )
script = ExtResource( 13 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Tableau_5"]
texture = ExtResource( 1 )

[node name="Tableau_RTL5" type="RichTextLabel" parent="YSort/Tableau_5/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tableau_6" type="Node2D" parent="YSort"]
position = Vector2( 738.566, 321.176 )
script = ExtResource( 14 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Tableau_6"]
texture = ExtResource( 1 )

[node name="Tableau_RTL6" type="RichTextLabel" parent="YSort/Tableau_6/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tableau_7" type="Node2D" parent="YSort"]
position = Vector2( 863.566, 321.176 )
script = ExtResource( 15 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Tableau_7"]
texture = ExtResource( 1 )

[node name="Tableau_RTL7" type="RichTextLabel" parent="YSort/Tableau_7/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foundation_1" type="Node2D" parent="YSort"]
position = Vector2( 488.566, 136.176 )
script = ExtResource( 3 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Foundation_1"]
texture = ExtResource( 1 )

[node name="Foundation_RTL1" type="RichTextLabel" parent="YSort/Foundation_1/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foundation_2" type="Node2D" parent="YSort"]
position = Vector2( 613.566, 136.176 )
script = ExtResource( 4 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Foundation_2"]
texture = ExtResource( 1 )

[node name="Foundation_RTL2" type="RichTextLabel" parent="YSort/Foundation_2/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foundation_3" type="Node2D" parent="YSort"]
position = Vector2( 738.566, 136.176 )
script = ExtResource( 5 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Foundation_3"]
texture = ExtResource( 1 )

[node name="Foundation_RTL3" type="RichTextLabel" parent="YSort/Foundation_3/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foundation_4" type="Node2D" parent="YSort"]
position = Vector2( 863.566, 136.176 )
script = ExtResource( 6 )

[node name="Sprite_Holder" type="Sprite" parent="YSort/Foundation_4"]
texture = ExtResource( 1 )

[node name="Foundation_RTL4" type="RichTextLabel" parent="YSort/Foundation_4/Sprite_Holder"]
margin_left = -38.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 10.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
